# grayzer

./: .gitignore  CMakeLists.txt  COPYING  Cargo.toml  README.html  README.md  TODO  all.pro  step.ppm
examples/: CMakeLists.txt  examples.pro
examples/example1/: CMakeLists.txt  example1.cpp  example1.pro
examples/example2/: CMakeLists.txt  example2.cpp
examples/example3/: CMakeLists.txt  example3.cpp
examples/example4/: CMakeLists.txt  example4.cpp
examples/example5/: CMakeLists.txt  example5.cpp
examples/example6/: CMakeLists.txt  example6.cpp
examples/example7/: CMakeLists.txt  example7.cpp
examples/example8/: CMakeLists.txt  example8.cpp
examples/example9/: CMakeLists.txt  example9.cpp
examples/exampleA/: CMakeLists.txt  exampleA.cpp
examples/exampleB/: CMakeLists.txt  exampleB.cpp  exampleB.pro
examples/exampleC/: CMakeLists.txt  exampleC.cpp
src/: BoundingVolume.cpp  CMakeLists.txt  Camera.cpp  ColorTable.cpp  ColorTable.h  Draw.cpp  Misc.cpp  Noise.cpp  Noise.h  Render.h  Shade.cpp  Stats.cpp  Tracer.cpp  Transformation.cpp  environment.rs  geom.rs  main.rs  ray.rs  src.pro  texture.rs  vec3.rs
src/environment/: Environment.cpp  Fog.cpp  Geometry.h  Scene.cpp  Scene.h  camera.rs  scene.rs
src/geom/: Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  GeomObj.cpp  GeomObj.h  Plane.cpp  Plane.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  Triangle.cpp  hittable.rs  sphere.rs
src/go/: Box.cpp  Cylinder.cpp  GeomObj.cpp  Plane.cpp  Rect.cpp  Sphere.cpp  Triangle.cpp
src/image/: BMP.cpp  RGB.h  Targa.cpp
src/light/: LightSource.h  PointLight.cpp  (+3 more)
(+98 files in other folders)
