add_library(grayzer STATIC
    ColorTable.cpp
    Stats.cpp
    Noise.cpp
    Tracer.cpp
    environment/Scene.cpp
    environment/Fog.cpp
    geom/GeomObj.cpp
    geom/Box.cpp
    geom/Cylinder.cpp
    geom/Plane.cpp
    geom/Rect.cpp
    geom/Sphere.cpp
    geom/Triangle.cpp
    image/BMP.cpp
    image/Targa.cpp
    light/PointLight.cpp
    light/SphericLight.cpp
    light/SpotLight.cpp
    math/Matrix.cpp
    math/Projection.cpp
    render/Render.cpp
    render/DRender.cpp
    render/ADRender.cpp
    texture/Bozo.cpp
    texture/Brick.cpp
    texture/BumpMap.cpp
    texture/Bumps.cpp
    texture/Checker.cpp
    texture/ColorMap.cpp
    texture/Dents.cpp
    texture/Gloss.cpp
    texture/Gradient.cpp
    texture/Granite.cpp
    texture/Marble.cpp
    texture/Ripples.cpp
    texture/Wood.cpp
    texture/Wrinkles.cpp
)
target_include_directories(grayzer PUBLIC "${CMAKE_SOURCE_DIR}/include")

